overflow issues

--- a/static/css/style_all.sass
+++ b/static/css/style_all.sass
@@ -242,9 +242,9 @@ a
 .bubble-3
     @extend .absolute-center
     top: 53%
-    width: 40%
+    width: 50%
     min-width: 300px
-    height: 2em
+    height: 1em
     display: none
     z-index: 200
     
@@ -267,6 +267,11 @@ a
     top: 60%
     height: 3em
 
+@media (min-width: 900px)
+    .bubble-2,
+    .bubble-4
+        height: 2em
+
 .bubble:after,
 .bubble-2:after
     content: ''
@@ -283,11 +288,11 @@ a
     
 .bubble-3:after
     @extend .bubble:after
-    left: 85%
+    left: 90%
 
 .bubble-4:after
     @extend .bubble:after
-    left: 10%
+    left: 20%
 
 /* REGISTRATION */    
 .user-form-container
@@ -628,10 +633,10 @@ input
         text-align: center
         overflow: hidden
     .hideOverflow
-        overflow: hidden
+        overflow: scroll
         height: 100%
     .scrollWrapper
-        overflow: scroll
+        overflow: auto
         height: 100%
     .blockTitle
         position: absolute
@@ -691,14 +696,13 @@ input
             left: 10%
             height: 30%
             width: 80%
-            background-color: $color-transparent-light
+            overflow: hidden
         .listBlock
             border-radius: 20px 20px 0 0
         .listBlock2
             border-radius: 0
             margin-top: 1.5em
             top: 0
-
     iframe
         display: block
         border: none
@@ -772,14 +776,14 @@ input
         * input:focus
             background-color: $color-white
         .permissions
-            width: calc(100% - 5em)
+            width: calc(100% - 4em)
             height: calc(100% - .5em)
             position: relative
-            left: -1em
+            left: -.5em
             top: -1.6em
             display: inline-block
             outline: none
-            padding: 0em .5em 0
+            padding: 0em .2em 0
             .editors
                 height: 2em
                 width: calc(100% - 2em)
@@ -802,6 +806,7 @@ input
             color: $color-gray-dark
             font-size: 16px
             text-align: left
+            overflow-x: scroll
             
 /* CLOUDS!! */
 #clouds
